[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'scikit-multimodallearn'
dynamic = ["version", "readme"]
requires-python = '>=3.6'

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "multimodal.__version__"}
readme = {file = ["README.rst"]}