[build-system]
requires = ["setuptools>=69.0", "setuptools-scm>=8.0", "wheel>=0.40", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = 'scikit-multimodallearn'
dynamic = ["version", "dependencies"]
requires-python = '>=3.6'

readme = {file = "README.rst", content-type = "text/x-rst"}
description = 'A scikit-learn compatible package for multimodal Classifiers'
authors = [
    {name = "Dominique Benielli" , email = "dominique.benielli@univ-amu.fr"},
    {name = "Sokol Koço" },
    {name = "Florent Jaillet"},
    {name = "Riikka Huusari"},
    {name = "Cécile Capponi"},
    {name = "Baptiste Bauvin"},
    {name = "Hachem Kadri'"}
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
]
keywords = ['machine learning, supervised learning, classification, ensemble methods, boosting, kernel']

[project.optional-dependencies]
test = ["pytest", "coverage==4.5.3", "pytest-cov"]
doc = ["sphinx==5.0", "numpydoc", "sphinx_gallery", "matplotlib", "sphinx_rtd_theme"]

[project.urls]
"Sources" = "https://github.com/multi-learn/scikit-multimodallearn"
Documentation  = "https://multi-learn.github.io/scikit-multimodallearn/"
"Bug Tracker" = "https://github.com/multi-learn/scikit-multimodallearn/issues"




[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
fallback_version = "0.1.0"
